Implementado resposivo e corrigido alguns problemas

--- a/index.html
+++ b/index.html
@@ -2,22 +2,26 @@
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
-    <title>Portifolio Felipe Bazzotti</title>
+    <title>Portfólio Felipe Bazzotti</title>
     <link rel="stylesheet" href="style/reset.css">
     <link rel="stylesheet" href="style/style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 <body>
     <header>
         <navbar class="nav">
-            <a>Home</a>
-            <p>About</p>
-            <p>Tech Stack</p>
-            <p>Projects</p>
-            <p>Contact</p>
+            <a href="#nav">Home</a>
+            <a href="#me">Sobre</a>
+            <a href="#technologies">Tecnologias</a>
+            <a href="#projects">Projetos</a>
+            <a href="#contact">Contato</a>
             <div class="social-media">
-                <a href="https://github.com/Bazzotti"><img src="img/github.png"></a>
-                <a href="https://twitter.com/BazzottiFelipe"><img src="img/twitter.png"></a>
-                <a href="https://www.linkedin.com/in/felipe-bazzotti/"><img src="img/linkedin.png"></a>
+                <a href="https://github.com/Bazzotti"><img src="img/github.png" alt="icone github" title="GitHub"></a>
+                <a href="https://twitter.com/BazzottiFelipe"><img src="img/twitter.png" alt="Icone Twitter" title="Twitter"></a>
+                <a href="https://www.linkedin.com/in/felipe-bazzotti/"><img src="img/linkedin.png" alt="Icone Linkedin" title="Linkedin"></a>
             </div>
         </navbar>
         <div id="me">
@@ -33,25 +37,25 @@
     <section id="technologies">
         <div>
             <h2>
-                Meu conjunto de Tecnologias
+                Tecnologias
             </h2>
             <p>
                 Tecnologias que tenho trabalhado recentemente
             </p>
         </div>
         <div id="icons">
-            <img src="img/HTML5.png">
-            <img src="img/CSS3.png">
-            <img src="img/JS.png">
-            <img src="img/Premiere.png">
-            <img src="img/VSCODE.png">
-            <img src="img/github-fill.png">
+            <img src="img/HTML5.png" alt="Icone HTML5" title="HTML5">
+            <img src="img/CSS3.png" alt="Icone CSS3" title="CSS3">
+            <img src="img/JS.png" alt="Icone JavaScript" title="JavaScript">
+            <img src="img/Premiere.png" alt="Icone Adobe premiere" title="Adobe Premiere" class="premiere">
+            <img src="img/VSCODE.png" alt="Icone Visual Studio Code" title="Visual Studio Code">
+            <img src="img/github-fill.png" alt="Icone GitHub" title="GitHub">
         </div>
     </section>
     <section id="projects">
         <div class="info-top">
-            <h2>Projetos</h2>
-            <p>Coisas que eu construí até agora</p>
+            <h2>Portfólio</h2>
+            <p>Projetos construídos até o momento</p>
         </div>
         <div class="projetos">
             <div class="hbo">  
@@ -74,14 +78,14 @@
             </div>
         </div>  
     </section>
-    <footer>
+    <footer id="contact">
         <div>
-            <p>
-                51 49 9 9174-4613
-            </p>
-            <p>
+            <a href="tel:+5149991744613"> 
+                +51 49 9 9174-4613
+            </a>
+            <a href="mailto:felipebazzotti16@outlook.com">
                 felipebazzotti16@outlook.com
-            </p>
+            </a>
             <div class="social-media">
                 <a href="https://github.com/Bazzotti"><img src="img/github.png"></a>
                 <a href="https://twitter.com/BazzottiFelipe"><img src="img/twitter.png"></a>
