--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="style/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;700&display=swap" rel="stylesheet">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" href="img/favicon.png"/>
 </head>
@@ -29,8 +29,8 @@
             <h1 id="im">
                 Olá👋, <br>
                 Meu nome é<br>
-                Felipe Bazzotti<br>
-                E eu contruo coisas para web
+                <b>Felipe Bazzotti</b><br>
+                E eu contruo soluções para web
             </h1>
             <img src="img/me.jpeg">
         </div>
@@ -63,18 +63,18 @@
                 <div class="info">
                     <img src="img/hbomax.png">
                     <h4>Clone HBO Max</h4>
-                    <p>Clone da pagina inial da HBO max</p>
+                    <p>Clone da pagina inicial da HBO max</p>
                     <p>Conjunto de técnologias: HTML, CSS</p>
-                    <a href="https://github.com/Bazzotti/HBO-MAX-clone"><img src="img/github.png">View Code</a>
+                    <a href="https://github.com/Bazzotti/HBO-MAX-clone"><img src="img/github.png">Ver código</a>
                 </div>
             </div>
             <div class="crypto">
                 <div class="info">
                     <img src="img/cryto.png">
-                    <h4>Cryoto app Finance</h4>
-                    <p>Clone feita de um template tirada do figma</p>
+                    <h4>Crypto app Finance</h4>
+                    <p>Clone feito de um template criado no figma</p>
                     <p>Conjunto de técnologias: HTML, CSS</p>
-                    <a href="https://github.com/Bazzotti/clone-crypto-app-finance"><img src="img/github.png">View Code</a>
+                    <a href="https://github.com/Bazzotti/clone-crypto-app-finance"><img src="img/github.png">Ver código</a>
                 </div>
             </div>
         </div>  
